# ChangeLog for dev-lang/v8
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.35 2011/02/04 14:32:25 phajdan.jr Exp $

*v8-3.0.12.8 (04 Feb 2011)

  04 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.0.7.ebuild,
  +v8-3.0.12.8.ebuild:
  Version bump for dev channel release. Remove old.

*v8-3.0.12 (02 Feb 2011)

  02 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-2.5.9.7.ebuild,
  -v8-3.0.6.1.ebuild, +v8-3.0.12.ebuild:
  Version bump for dev channel release. Remove old.

  28 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-9999.ebuild:
  Remove patch applied upstream, bug #352899 by Julien Sanchez
  <julien.sanchez@gmail.com>.

*v8-3.0.9 (27 Jan 2011)

  27 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -v8-2.5.9.6-r1.ebuild, +v8-3.0.9.ebuild:
  Version bump for dev channel release. Remove old.

*v8-2.5.9.11 (26 Jan 2011)

  26 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-2.5.9.11.ebuild:
  Version bump for beta channel release.

  22 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-3.0.7.ebuild,
  v8-9999.ebuild:
  Fix src_test, bug #352374 by Nikoli <nikoli@lavabit.com>.

*v8-3.0.7 (21 Jan 2011)

  21 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-3.0.7.ebuild:
  Version bump for dev channel release.

*v8-2.5.9.7 (19 Jan 2011)

  19 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-2.4.9.14.ebuild,
  -v8-2.5.9.6.ebuild, +v8-2.5.9.7.ebuild, -v8-3.0.4.1.ebuild:
  Version bump for beta channel release. Remove old.

  14 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-3.0.6.1.ebuild,
  v8-9999.ebuild:
  Fix src_test, thanks to sgjesse's help on v8-users ML.

*v8-2.4.9.19 (13 Jan 2011)

  13 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> +v8-2.4.9.19.ebuild:
  Version bump for stable channel release.

*v8-3.0.6.1 (12 Jan 2011)

  12 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-2.5.9.1.ebuild,