@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/v8
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.35 2011/02/04 14:32:25 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.36 2011/02/10 10:08:11 voyageur Exp $
+
+*v8-2.5.9.15 (10 Feb 2011)
+
+  10 Feb 2011; Bernard Cafarelli <voyageur@gentoo.org> +v8-2.5.9.15.ebuild:
+  Version bump for stable channel release.
 
 *v8-3.0.12.8 (04 Feb 2011)
 
